test/resources/parser/failing/zomtest6.scala
object NestedComments {
  /* Outer comment
     /* Nested comment */
     Still in outer comment */
  1
}